--- a/1.0.0/demo/index.html
+++ b/1.0.0/demo/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/> <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="format-detection" content="telephone=no"/>
     <title>VcNumber的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.4.8/seed-min.js" charset="utf-8"></script>
     <style type="text/css">
         .line{
             margin: 35px 0;
+        }
+        .line label{
+            display:block;
+            margin-bottom: 5px;
         }
     </style>
 </head>
@@ -15,19 +22,24 @@
 <div class="container">
     <div id="content">
         <div class="line">
-            <input type="text" value="40.00" class="vc-number" data-range="2.00" data-max="9999999.00" data-min="1" data-hasdecimal="true">
+            <label for="J_1">带小数点</label>
+            <input type="text" value="40.00" class="vc-number" data-range="2.00" data-max="9999999.00" data-min="1" id="J_1">
         </div>
         <div class="line">
-            <input type="text" value="60" class="vc-number" data-range="12.00" data-max="88.00" data-min="10">
+            <label for="J_2">不带小数点</label>
+            <input type="text" value="60" class="vc-number" data-range="12.00" data-max="88.00" data-min="10" data-hasdecimal="false" id="J_2">
         </div>
         <div class="line">
-            <input type="text" value="60" class="vc-number-slide">
+            <label for="J_3">滑动效果</label>
+            <input type="text" value="60" class="vc-number-slide" id="J_3">
         </div>
         <div class="line">
-            <input type="text" value="60" class="vc-number-ch" >
+            <label for="J_4">中文提示1</label>
+            <input type="text" value="60.00" class="vc-number-ch" id="J_4">
         </div>
         <div class="line">
-            <input type="text" value="60" class="vc-number-ch2" >
+            <label for="J_4">中文提示2</label>
+            <input type="text" value="60" class="vc-number-ch2" id="J_5">
         </div>
     </div>
 </div>
@@ -46,13 +58,14 @@
         });
     }
 
-    S.use('kg/vc-number/1.0.0/index,kg/vc-number/1.0.0/arrow.css', function (S, VcNumber) {
+    S.use('kg/vc-number/1.0.0/index,kg/vc-number/1.0.0/index.css', function (S, VcNumber) {
         var number = new VcNumber({
             $target: '.vc-number',
             range: 2,
             max: 88,
             min: 1,
-            hasDecimal: true
+            hasDecimal: true,
+            showRange: true
         });
 
         number.render();
@@ -64,7 +77,8 @@
                 range: 2,
                 max: 888,
                 min: 1,
-                hasDecimal: false
+                hasDecimal: false,
+                showRange: true
             });
 
             number2.render();
@@ -79,7 +93,7 @@
                 range: 1000,
                 max: 999999999,
                 min: 1,
-                hasDecimal: false
+                hasDecimal: true
             });
 
             number2.render();
@@ -92,7 +106,9 @@
                 range: 1000,
                 max: 999999999,
                 min: 1,
-                hasDecimal: true
+                hasDecimal: false,
+                showRange: true
+
             });
 
             number3.render();
