sync daily version 1.1.0

--- a/1.1.0/demo/index.html
+++ b/1.1.0/demo/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <h2>VcNumber的demo</h2>
-<h3><a href="./arrow.html" target="_blank">另一种皮肤请点击</a></h3>
+<h3><a href="./arrow.html" target="_blank">箭头皮肤请点击</a></h3>
 <div class="container">
     <div id="content">
         <div class="line">
