--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/> <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="format-detection" content="telephone=no"/>
     <title>VcNumber的demo</title>
+    <link rel="stylesheet" href="http://kpm.taobao.net/vc-pagination/doc/demo/header.css" />
     <script src="http://g.tbcdn.cn/kissy/k/1.4.8/seed-min.js" charset="utf-8"></script>
     <style type="text/css">
         .line{
@@ -55,7 +56,7 @@
         S.config({
             packages:[
                 {
-                    name:"kg/vc-number/1.1.0",
+                    name:"kg/vc-number/1.2.0",
                     path:debugPath,
                     charset:"utf-8"
                 }
@@ -63,7 +64,7 @@
         });
     }
 
-    S.use('kg/vc-number/1.1.0/index,kg/vc-number/1.1.0/index.css', function (S, VcNumber) {
+    S.use('kg/vc-number/1.2.0/index,kg/vc-number/1.2.0/index.css', function (S, VcNumber) {
         var number = new VcNumber({
             $target: '.vc-number',
             range: 2,
@@ -79,7 +80,7 @@
         number.render();
 
 
-        S.use('kg/vc-number/1.1.0/plugins/slide/slide,kg/vc-number/1.1.0/plugins/slide/slide.css',function(S, Slide){
+        S.use('kg/vc-number/1.2.0/plugins/slide/slide,kg/vc-number/1.2.0/plugins/slide/slide.css',function(S, Slide){
             var number2 = new VcNumber({
                 $target: '.vc-number-slide',
                 range: 2,
@@ -95,7 +96,7 @@
 
         });
 
-        S.use('kg/vc-number/1.1.0/plugins/amountInWords/amountInWords,kg/vc-number/1.1.0/plugins/amountInWords/amountInWords.css',function(S, AmountInWords){
+        S.use('kg/vc-number/1.2.0/plugins/amountInWords/amountInWords,kg/vc-number/1.2.0/plugins/amountInWords/amountInWords.css',function(S, AmountInWords){
             var number2 = new VcNumber({
                 $target: '.vc-number-ch',
                 range: 1000,
